load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["eth1_types.go", "hashing.go", "gen_header_json.go"],
    importpath = "github.com/prysmaticlabs/prysm/beacon-chain/powchain/types",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//encoding/bytesutil:go_default_library",
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_go_ethereum//common/hexutil:go_default_library",
        "@com_github_ethereum_go_ethereum//core/types:go_default_library",
        "@com_github_ethereum_go_ethereum//crypto:go_default_library",
        "@com_github_ethereum_go_ethereum//rlp:go_default_library",
        "@org_golang_x_crypto//sha3:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["eth1_types_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_ethereum_go_ethereum//core/types:go_default_library",
    ],
)
